--- a/1. Neural Bag-of-Words_SentimentAnalysis.ipynb
+++ b/1. Neural Bag-of-Words_SentimentAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4a73bd3d",
+   "id": "9f1d82da",
    "metadata": {},
    "source": [
     "# Neural Bag-Of-Words Model for Sentiment Analysis"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f62e131",
+   "id": "369ca670",
    "metadata": {},
    "source": [
     "# 1. Dataset\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0ba784d",
+   "id": "dafbb02e",
    "metadata": {},
    "source": [
     "# 2. Data Preparation"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34ba2f31",
+   "id": "018b6250",
    "metadata": {},
    "source": [
     "## 2.1. Clean Text Data"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "59122808",
+   "id": "04248024",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
     "    return tokens\n",
     "\n",
     "# load the document\n",
-    "filename = 'D:/5.ResearchInterest/1.NLP/1.BOW_SentimentAnalysis/Data/txt_sentoken/pos/cv000_29590.txt'\n",
+    "filename = 'D:/Data/txt_sentoken/pos/cv000_29590.txt'\n",
     "text = load_doc(filename)\n",
     "tokens = clean_doc(text)\n",
     "print(tokens)"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b49f07b",
+   "id": "e4a139bb",
    "metadata": {},
    "source": [
     "## 2.2. Define a Vocabulary"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5d3fec35",
+   "id": "e8df7c3f",
    "metadata": {},
    "outputs": [
     {
@@ -155,8 +155,8 @@
     "# define vocab\n",
     "vocab = Counter()\n",
     "# add all docs to vocab\n",
-    "process_docs('D:/5.ResearchInterest/1.NLP/1.BOW_SentimentAnalysis/Data/txt_sentoken/pos', vocab)\n",
-    "process_docs('D:/5.ResearchInterest/1.NLP/1.BOW_SentimentAnalysis/Data/txt_sentoken/neg', vocab)\n",
+    "process_docs('D:/Data/txt_sentoken/pos', vocab)\n",
+    "process_docs('D:/Data/txt_sentoken/neg', vocab)\n",
     "# print the size of the vocab\n",
     "print(len(vocab))\n",
     "# print the top words in the vocab\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e325a1ee",
+   "id": "c9d20148",
    "metadata": {},
    "source": [
     "## 2.3. Filter Vocabulary"
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a45ad003",
+   "id": "beb526c0",
    "metadata": {},
    "outputs": [
     {
@@ -201,12 +201,12 @@
     "tokens = [k for k,c in vocab.items() if c >= min_occurrence]\n",
     "print(len(tokens))\n",
     "# save tokens to a vocabulary file\n",
-    "save_list(tokens, 'D:/5.ResearchInterest/1.NLP/1.BOW_SentimentAnalysis/Data/ProcessedData/vocab.txt')"
+    "save_list(tokens, 'D:/Data/ProcessedData/vocab.txt')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ac1c2c5a",
+   "id": "a7289daf",
    "metadata": {},
    "source": [
     "# 3. Bag-Of-Words Representation"
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0401fab",
+   "id": "4f4d2c9d",
    "metadata": {},
    "source": [
     "## 3.2. Reviews to Lines of Tokens"
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "87cfa8f0",
+   "id": "9d07a32e",
    "metadata": {},
    "outputs": [
     {
@@ -291,15 +291,15 @@
     "# load and clean a dataset\n",
     "def load_clean_dataset(vocab):\n",
     "\t# load documents\n",
-    "\tneg = process_docs('D:/5.ResearchInterest/1.NLP/1.BOW_SentimentAnalysis/Data/txt_sentoken/neg', vocab)\n",
-    "\tpos = process_docs('D:/5.ResearchInterest/1.NLP/1.BOW_SentimentAnalysis/Data/txt_sentoken/pos', vocab)\n",
+    "\tneg = process_docs('D:/Data/txt_sentoken/neg', vocab)\n",
+    "\tpos = process_docs('D:/Data/txt_sentoken/pos', vocab)\n",
     "\tdocs = neg + pos\n",
     "\t# prepare labels\n",
     "\tlabels = [0 for _ in range(len(neg))] + [1 for _ in range(len(pos))]\n",
     "\treturn docs, labels\n",
     "\n",
     "# load the vocabulary\n",
-    "vocab_filename =  'D:/5.ResearchInterest/1.NLP/1.BOW_SentimentAnalysis/Data/ProcessedData/vocab.txt'\n",
+    "vocab_filename =  'D:/Data/ProcessedData/vocab.txt'\n",
     "vocab = load_doc(vocab_filename)\n",
     "vocab = vocab.split()\n",
     "vocab = set(vocab)\n",
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04473dfe",
+   "id": "c76a927f",
    "metadata": {},
    "source": [
     "## 3.3 Token Lines to bag-of-Words Vectors"
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c821d7b3",
+   "id": "790cd79e",
    "metadata": {},
    "outputs": [
     {
@@ -393,8 +393,8 @@
     "# load and clean a dataset\n",
     "def load_clean_dataset(vocab, is_train):\n",
     "\t# load documents\n",
-    "\tneg = process_docs('D:/5.ResearchInterest/1.NLP/1.BOW_SentimentAnalysis/Data/txt_sentoken/neg', vocab, is_train)\n",
-    "\tpos = process_docs('D:/5.ResearchInterest/1.NLP/1.BOW_SentimentAnalysis/Data/txt_sentoken/pos', vocab, is_train)\n",
+    "\tneg = process_docs('D:/Data/txt_sentoken/neg', vocab, is_train)\n",
+    "\tpos = process_docs('D:/Data/txt_sentoken/pos', vocab, is_train)\n",
     "\tdocs = neg + pos\n",
     "\t# prepare labels\n",
     "\tlabels = array([0 for _ in range(len(neg))] + [1 for _ in range(len(pos))])\n",
@@ -407,7 +407,7 @@
     "\treturn tokenizer\n",
     "\n",
     "# load the vocabulary\n",
-    "vocab_filename = 'D:/5.ResearchInterest/1.NLP/1.BOW_SentimentAnalysis/Data/ProcessedData/vocab.txt'\n",
+    "vocab_filename = 'D:/Data/ProcessedData/vocab.txt'\n",
     "vocab = load_doc(vocab_filename)\n",
     "vocab = set(vocab.split())\n",
     "# load all reviews\n",
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a68b2426",
+   "id": "44f0b326",
    "metadata": {},
    "source": [
     "# 4. Sentiment Analysis Models"
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7b57059",
+   "id": "d19bb79d",
    "metadata": {},
    "source": [
     "## 4.1. First Sentiment Analysis Model"
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e6fd7a03",
+   "id": "102c9b5b",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f5ca328",
+   "id": "f38adeb7",
    "metadata": {},
    "source": [
     "## 4.2. Comparing Senetiment Models for Different Word scoring methods\n",
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6313d5e7",
+   "id": "ec67a185",
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eefeb589",
+   "id": "397a7479",
    "metadata": {},
    "source": [
     "## 4.3. Prediction on a New text Review\n",
@@ -1222,7 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "65767dca",
+   "id": "ac6e7dce",
    "metadata": {},
    "outputs": [
     {
@@ -1313,20 +1313,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2524e68b",
+   "id": "0f89759c",
    "metadata": {},
    "source": [
     "# 5. Conclusion\n",
     "We can see that in sample review this mode is reasonbal to get the right sentiments"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74d57a68",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
